grafana/grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: sensugo
spec:
  replicas: 1
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      volumes:
        - name: grafana-provisioning-datasources
          configMap:
            name: grafana-provisioning-datasources
        - name: grafana-provisioning-dashboards
          configMap:
            name: grafana-provisioning-dashboards
      containers:
        - name: grafana
          image: sensu/grafana:flux
          ports:
            - protocol: TCP
              containerPort: 3000
          volumeMounts:
            - name: grafana-provisioning-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-provisioning-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
        - name: sensu-agent
          image: sensu/sensu:latest
          command: ["/opt/sensu/bin/sensu-agent", "start", "--log-level", "debug"]
      nodeSelector:
          app: sensugo
      tolerations:
        - effect: NoExecute
          key: app
          operator: Equal
          value: sensugo
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: sensugo
spec:
  selector:
    app: grafana
  ports:
    - name: webui
      protocol: TCP
      port: 3001
      targetPort: 3000
