grafana/grafana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sensugo-ingress
  namespace: sensugo
  annotations:
    kubernetes.io/ingress.class: private-nginx
spec:
  rules:
  - host: sensugo-prod-grafana.mediaiqdigital.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3001
